--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /** Settings **/
 @import url("https://fonts.googleapis.com/css?family=Montserrat:500|Roboto:400,500&display=swap");
 /** Tools **/
@@ -188,12 +189,18 @@ span {
   height: 100vh;
   position: fixed;
   overflow: hidden;
+  z-index: 999;
   background: #2A0560;
   padding: 24px 48px;
   display: grid;
   grid-template-rows: auto 1fr auto;
   gap: 24px;
   box-shadow: 3px 0px 6px rgba(0, 0, 0, 0.54);
+}
+@media screen and (max-width: 768px) {
+  .aside {
+    display: none;
+  }
 }
 .aside .aside__header {
   display: grid;
@@ -248,6 +255,13 @@ span {
 .aside .aside__filters .filters__list .list__item:hover {
   color: rgba(244, 244, 244, 0.87);
 }
+.aside .aside__filters .filters__list .list__item--active {
+  color: rgba(248, 50, 103, 0.78);
+}
+.aside .aside__filters .filters__list .list__item--active:before {
+  content: "·";
+  margin-right: 12px;
+}
 .aside .aside__footer .footer__link {
   font-size: 24px;
   color: rgba(248, 50, 103, 0.87);
@@ -259,6 +273,12 @@ span {
   width: calc(100vw - 330px);
   height: 100vh;
   position: relative;
+}
+@media screen and (max-width: 768px) {
+  .main {
+    margin-left: 0;
+    width: 100vw;
+  }
 }
 .main .main__quotes {
   position: absolute;
