--- a/src/index.css
+++ b/src/index.css
@@ -273,11 +273,27 @@ span {
   width: calc(100vw - 330px);
   height: 100vh;
   position: relative;
+  overflow: hidden;
 }
 @media screen and (max-width: 768px) {
   .main {
     margin-left: 0;
     width: 100vw;
+  }
+}
+.main .categories__button {
+  position: absolute;
+  top: 0;
+  padding: 12px 24px;
+  border-color: transparent;
+  background: #f4f4f4;
+  text-transform: uppercase;
+  display: none;
+  cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+  .main .categories__button {
+    display: block;
   }
 }
 .main .main__quotes {
@@ -300,6 +316,13 @@ span {
   margin-bottom: 24px;
   line-height: 54px;
   letter-spacing: 0.54px;
+}
+@media screen and (max-width: 768px) {
+  .main .main__quotes .quotes__quote {
+    font-size: 24px;
+    line-height: 36px;
+    letter-spacing: 0.36px;
+  }
 }
 
 /** Trumps **/
